--- a/css/style.css
+++ b/css/style.css
@@ -72,96 +72,174 @@
       font-size: 22px;
       margin-top: 30px; }
 
-.features {
-  width: 100%;
-  background-color: #2a0000; }
-  .features .info {
-    width: 100%;
-    background-color: #753b00;
-    padding: 40px;
-    -webkit-box-shadow: inset 0px 0px 30px rgba(0, 0, 0, 0.8);
-            box-shadow: inset 0px 0px 30px rgba(0, 0, 0, 0.8); }
-    .features .info-header {
+.content {
+  background-color: #2a0000;
+  width: 100%; }
+  .content:before {
+    content: "";
+    height: 4px;
+    display: block;
+    background-color: #2a0000;
+    margin-top: -2px; }
+  .content .features {
+    width: 100%; }
+    .content .features .info {
       width: 100%;
-      height: 60px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-pack: distribute;
-          justify-content: space-around; }
-      .features .info-header-tab {
-        color: #750000;
-        font-size: 22px;
-        font-weight: bold;
-        cursor: pointer; }
-        .features .info-header-tab:after {
-          content: "";
-          display: block;
-          width: 0%;
-          height: 3px;
-          background-color: #750000;
-          margin-top: 4px;
-          -webkit-transition: 0.4s;
-          transition: 0.4s; }
-        .features .info-header-tab:hover:after {
-          width: 60%; }
-    .features .info-tabcontent {
-      width: 100%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-transition: 0.3s;
-      transition: 0.3s; }
-      .features .info-tabcontent .description {
-        width: 50%; }
-        .features .info-tabcontent .description-title {
-          color: #750000;
-          font-size: 34px; }
-          .features .info-tabcontent .description-title:after {
-            content: "";
-            display: block;
-            background-color: #750000;
-            width: 25%;
-            height: 3px;
-            margin-top: 4px; }
-        .features .info-tabcontent .description-text {
-          color: #fff;
-          font-weight: 300;
-          margin-top: 30px;
-          padding-right: 20px; }
-        .features .info-tabcontent .description-btn {
-          width: 50%;
-          height: 45px;
-          margin-top: 30px;
-          color: #750000;
-          border: 1px solid #750000;
-          font-size: 14px;
-          text-transform: uppercase;
-          font-weight: bold;
-          text-align: center;
-          line-height: 43px;
-          cursor: pointer; }
-          .features .info-tabcontent .description-btn:hover {
-            -webkit-box-shadow: 0px 0px 5px #750000;
-                    box-shadow: 0px 0px 5px #750000; }
-      .features .info-tabcontent .photo {
-        -webkit-box-ordinal-group: 2;
-            -ms-flex-order: 1;
-                order: 1;
-        width: 50%;
+      background-color: #753b00;
+      padding: 40px;
+      -webkit-box-shadow: inset 0px 0px 30px rgba(0, 0, 0, 0.8);
+              box-shadow: inset 0px 0px 30px rgba(0, 0, 0, 0.8); }
+      .content .features .info-header {
+        width: 100%;
+        height: 60px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center; }
-        .features .info-tabcontent .photo img {
-          width: 100%;
-          -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
-                  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8); }
-    .features .info .hide {
-      display: none; }
-    .features .info .show {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex; }
+        -ms-flex-pack: distribute;
+            justify-content: space-around; }
+        .content .features .info-header-tab {
+          color: #750000;
+          font-size: 22px;
+          font-weight: bold;
+          cursor: pointer; }
+          .content .features .info-header-tab:after {
+            content: "";
+            display: block;
+            width: 0%;
+            height: 3px;
+            background-color: #750000;
+            margin-top: 4px;
+            -webkit-transition: 0.4s;
+            transition: 0.4s; }
+          .content .features .info-header-tab:hover:after {
+            width: 60%; }
+      .content .features .info-tabcontent {
+        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-transition: all 5s ease;
+        transition: all 5s ease; }
+        .content .features .info-tabcontent .description {
+          width: 50%; }
+          .content .features .info-tabcontent .description-title {
+            color: #750000;
+            font-size: 34px; }
+            .content .features .info-tabcontent .description-title:after {
+              content: "";
+              display: block;
+              background-color: #750000;
+              width: 25%;
+              height: 3px;
+              margin-top: 4px; }
+          .content .features .info-tabcontent .description-text {
+            font-family: "Merriweather", serif;
+            color: #fff;
+            font-weight: 300;
+            margin-top: 30px;
+            padding-right: 20px; }
+          .content .features .info-tabcontent .description-btn {
+            width: 180px;
+            height: 45px;
+            margin-top: 30px;
+            color: #750000;
+            border: 1px solid #750000;
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: bold;
+            text-align: center;
+            line-height: 43px;
+            cursor: pointer; }
+            .content .features .info-tabcontent .description-btn:hover {
+              -webkit-box-shadow: 0px 0px 5px #750000;
+                      box-shadow: 0px 0px 5px #750000; }
+        .content .features .info-tabcontent .photo {
+          -webkit-box-ordinal-group: 2;
+              -ms-flex-order: 1;
+                  order: 1;
+          width: 50%;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+              -ms-flex-align: center;
+                  align-items: center; }
+          .content .features .info-tabcontent .photo img {
+            width: 100%;
+            -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8);
+                    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.8); }
+      .content .features .info .hide {
+        display: none; }
+      .content .features .info .show {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; }
+  .content .footer-block {
+    width: 100%;
+    padding: 30px; }
+    .content .footer-block .social-block {
+      width: 100%; }
+      .content .footer-block .social-block-title {
+        color: #fff;
+        font-size: 25px;
+        text-align: center; }
+      .content .footer-block .social-block-links {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+        padding-top: 20px; }
+        .content .footer-block .social-block-links a {
+          padding: 5px 0 5px; }
+          .content .footer-block .social-block-links a img {
+            width: 70px;
+            height: 70px;
+            border-radius: 10px;
+            -webkit-transition: all 0.5s ease;
+            transition: all 0.5s ease; }
+            .content .footer-block .social-block-links a img:hover {
+              -webkit-transform: rotate(360deg);
+                      transform: rotate(360deg); }
+    .content .footer-block .contact-block {
+      width: 100%; }
+      .content .footer-block .contact-block-title {
+        text-align: center;
+        color: #fff;
+        font-size: 25px;
+        padding-left: 10%; }
+      .content .footer-block .contact-block-links {
+        padding-top: 20px; }
+        .content .footer-block .contact-block-links .phone-link {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center; }
+          .content .footer-block .contact-block-links .phone-link img {
+            height: 22px; }
+          .content .footer-block .contact-block-links .phone-link a {
+            color: #fff;
+            font-size: 22px;
+            text-decoration: none; }
+        .content .footer-block .contact-block-links .personal-message {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center; }
+          .content .footer-block .contact-block-links .personal-message a {
+            display: block;
+            font-size: 22px;
+            text-decoration: none;
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 10px;
+            padding: 10px;
+            margin-top: 10px;
+            -webkit-transition: 0.5s;
+            transition: 0.5s; }
+            .content .footer-block .contact-block-links .personal-message a:hover {
+              background-color: #750000; }
