--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@media screen and (max-width: 360px) {
+  .main-block-title {
+    font-size: 11px; } }
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -13,9 +16,6 @@
   z-index: 10; }
   .header-block ul {
     height: 60px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     list-style-type: none;
     -ms-flex-pack: distribute;
         justify-content: space-around;
@@ -23,13 +23,20 @@
         -ms-flex-align: center;
             align-items: center;
     color: #fff; }
-    .header-block ul li:after {
+    .header-block ul li {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+    .header-block ul a:after {
       content: "";
       display: block;
       background-color: #750000;
       height: 2px;
       width: 100%;
-      margin-top: 4px; }
+      margin-top: 6px; }
   .header-block a {
     text-decoration: none;
     color: inherit;
@@ -40,7 +47,7 @@
 
 .main {
   width: 100%;
-  height: 650px;
+  min-height: 650px;
   background-color: #2a0000; }
   .main-block {
     min-height: 300px;
@@ -92,9 +99,6 @@
       .content .features .info-header {
         width: 100%;
         height: 60px;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
         -ms-flex-pack: distribute;
             justify-content: space-around; }
         .content .features .info-header-tab {
@@ -112,52 +116,43 @@
             -webkit-transition: 0.4s;
             transition: 0.4s; }
           .content .features .info-header-tab:hover:after {
-            width: 60%; }
+            width: 25%; }
       .content .features .info-tabcontent {
         width: 100%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
         -webkit-transition: all 5s ease;
         transition: all 5s ease; }
-        .content .features .info-tabcontent .description {
-          width: 50%; }
-          .content .features .info-tabcontent .description-title {
-            color: #750000;
-            font-size: 34px; }
-            .content .features .info-tabcontent .description-title:after {
-              content: "";
-              display: block;
-              background-color: #750000;
-              width: 25%;
-              height: 3px;
-              margin-top: 4px; }
-          .content .features .info-tabcontent .description-text {
-            font-family: "Merriweather", serif;
-            color: #fff;
-            font-weight: 300;
-            margin-top: 30px;
-            padding-right: 20px; }
-          .content .features .info-tabcontent .description-btn {
-            width: 180px;
-            height: 45px;
-            margin-top: 30px;
-            color: #750000;
-            border: 1px solid #750000;
-            font-size: 14px;
-            text-transform: uppercase;
-            font-weight: bold;
-            text-align: center;
-            line-height: 43px;
-            cursor: pointer; }
-            .content .features .info-tabcontent .description-btn:hover {
-              -webkit-box-shadow: 0px 0px 5px #750000;
-                      box-shadow: 0px 0px 5px #750000; }
+        .content .features .info-tabcontent .description-title {
+          color: #750000;
+          font-size: 34px; }
+          .content .features .info-tabcontent .description-title:after {
+            content: "";
+            display: block;
+            background-color: #750000;
+            width: 25%;
+            height: 3px;
+            margin-top: 4px; }
+        .content .features .info-tabcontent .description-text {
+          font-family: "Merriweather", serif;
+          color: #fff;
+          font-weight: 300;
+          margin-top: 30px;
+          padding-right: 20px; }
+        .content .features .info-tabcontent .description-btn {
+          width: 180px;
+          height: 45px;
+          margin-top: 30px;
+          color: #750000;
+          border: 1px solid #750000;
+          font-size: 14px;
+          text-transform: uppercase;
+          font-weight: bold;
+          text-align: center;
+          line-height: 43px;
+          cursor: pointer; }
+          .content .features .info-tabcontent .description-btn:hover {
+            -webkit-box-shadow: 0px 0px 5px #750000;
+                    box-shadow: 0px 0px 5px #750000; }
         .content .features .info-tabcontent .photo {
-          -webkit-box-ordinal-group: 2;
-              -ms-flex-order: 1;
-                  order: 1;
-          width: 50%;
           display: -webkit-box;
           display: -ms-flexbox;
           display: flex;
@@ -243,3 +238,13 @@
             transition: 0.5s; }
             .content .footer-block .contact-block-links .personal-message a:hover {
               background-color: #750000; }
+
+@media screen and (max-width: 600px) {
+  .main-block-title {
+    font-size: 22px; }
+
+  .photo {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    margin: 20px auto 10px; } }
