--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,9 @@
 $dark-color: #2a0000
 $main-color: #750000
 $blond-color: #fff
+@media screen and (max-width: 360px)
+    .main-block-title
+        font-size: 11px
 *
     box-sizing: border-box
     margin: 0
@@ -14,18 +17,20 @@ $blond-color: #fff
     z-index: 10    
     ul
         height: 60px
-        display: flex
         list-style-type: none
         justify-content: space-around
         align-items: center
         color: $blond-color
-        li:after
+        li
+            display: flex
+            justify-content: center
+        a:after
             content: ''
             display: block
             background-color: $main-color
             height: 2px
             width: 100%
-            margin-top: 4px
+            margin-top: 6px
     a
         text-decoration: none
         color: inherit
@@ -35,7 +40,7 @@ $blond-color: #fff
         color: inherit
 .main
     width: 100%
-    height: 650px
+    min-height: 650px
     background-color: $dark-color    
     &-block
         min-height: 300px
@@ -85,7 +90,6 @@ $blond-color: #fff
             &-header
                 width: 100%
                 height: 60px
-                display: flex
                 justify-content: space-around
                 &-tab
                     color: $main-color
@@ -101,13 +105,11 @@ $blond-color: #fff
                         margin-top: 4px
                         transition: 0.4s
                     &:hover:after
-                        width: 60%
+                        width: 25%
             &-tabcontent
                 width: 100%
-                display: flex
                 transition: all 5s ease            
                 .description
-                    width: 50%
                     &-title
                         color: $main-color
                         font-size: 34px
@@ -139,8 +141,6 @@ $blond-color: #fff
                         &:hover
                             box-shadow: 0px 0px 5px $main-color
                 .photo
-                    order: 1
-                    width: 50%
                     display: flex
                     align-items: center
                     
@@ -206,3 +206,9 @@ $blond-color: #fff
                         transition: 0.5s
                         &:hover
                             background-color: $main-color
+@media screen and (max-width: 600px)
+    .main-block-title
+        font-size: 22px
+    .photo
+        order: -1
+        margin: 20px auto 10px
